src/objects/IncentiveProject__c.object
<CustomObject>
    <customHelpPage>INC_HelpRedirect</customHelpPage>
    <description>DTW eligible projects to be considered for enrollment in DTW Incentive Plans</description>
    <fields>
        <fullName>AGGRAlerts__c</fullName>
        <formula>IF(RecordType.Name =&quot;Aggregated Project&quot;,

  IF(DTWAdmin__c  = &quot;&quot;, 
      IMAGE(&quot;/resource/1429552689000/ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Aggregated Project Missing DTW Admin&quot; &amp; BR(), NULL) &amp;
  IF( OR(TEXT(DTW_Admin_Status__c) = &quot;On Hold&quot;,TEXT(DTW_Admin_Status__c) =&quot;Rejected&quot;),
      IMAGE(&quot;/resource/1429552689000/ExclamationMark&quot;,&quot;Alert&quot;, 20,20) &amp; &quot; Aggregated Project Not Currently Suitable for Workflow&quot; &amp; BR(), NULL)

,NULL)</formula>
        <label>AGGR Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualContingencyBudgetITD__c</fullName>
        <label>Actual Contingency - ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualDPEBudgetITD__c</fullName>
        <label>Actual DPE ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualFringeBudgetITD__c</fullName>
        <label>Actual Fringe ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGMofNSRITD__c</fullName>
        <description>Indicates the Inception to Date (ITD) Gross Margin % of NSR for the project. Current project performance should be compared to the budget and EAC for the purposes of setting a DTW baseline. Click for further details.</description>
        <formula>IF(AND(NOT(ISNULL(ActualGrossMarginITD__c)), ActualGrossMarginITD__c &gt; 0),  IF(AND(NOT(ISNULL(ActualNSRITD__c)), ActualNSRITD__c &gt; 0), ActualGrossMarginITD__c/ActualNSRITD__c, 0) , 0)

/* ActualGrossMarginITD__c /   ActualNSRBudgetITD__c */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the Inception to Date (ITD) Gross Margin % of NSR for the project. Current project performance should be compared to the budget and EAC for the purposes of setting a DTW baseline. Click for further details.</inlineHelpText>
        <label>ITD GM% of NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ActualGrossMarginITD__c</fullName>
        <description>Gross Margin - ITD</description>
        <label>Actual Gross Margin ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualGrossRevenueITD__c</fullName>
        <description>Actual Gross Revenue - ITD</description>
        <label>Actual Gross Revenue ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualLaborCostMultiplier__c</fullName>
        <label>Actual Direct Labor Multiplier ITD</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualNMofNSRITD__c</fullName>
        <formula>IF(AND(NOT(ISNULL(ActualNetMarginITD__c)), ActualNetMarginITD__c &gt; 0),  IF(AND(NOT(ISNULL(ActualNSRITD__c)), ActualNSRITD__c &gt; 0), ActualNetMarginITD__c/ActualNSRITD__c, 0) , 0)


/*ActualNetMarginITD__c / ActualNSRBudgetITD__c */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual NM% of NSR ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ActualNSRITD__c</fullName>
        <description>NSR - ITD</description>
        <label>Actual NSR - ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualNetMarginITD__c</fullName>
        <description>Net Margin - ITD</description>
        <label>Actual Net Margin ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualODCBudgetITD__c</fullName>
        <description>Actual ODC Budget ITD</description>
        <label>Actual ODC (excl subs) ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualOverheadITD__c</fullName>
        <label>Actual Overhead ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualPercentProjectCompleteITD__c</fullName>
        <label>Actual Cost % Complete ITD</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ActualSubsBudgetITD__c</fullName>
        <description>Actual Subs ITD</description>
        <label>Actual Subs ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualTotalCostsITD__c</fullName>
        <description>Total Costs - ITD</description>
        <label>Actual Total Costs ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcutalDirectLaborITD__c</fullName>
        <description>Actual Direct Labor ITD</description>
        <label>Actual Direct Labor ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AggregatedParentNumber__c</fullName>
        <formula>Aggregated_Parent_Project__r.AggregatorAutonumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aggregated Parent Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregated_Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aggregated Parent Project</label>
        <referenceTo>IncentiveProject__c</referenceTo>
        <relationshipLabel>Child Aggregated Projects</relationshipLabel>
        <relationshipName>Incentive_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aggregated_Project__c</fullName>
        <label>Aggregated Project</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AggregatorAutonumber__c</fullName>
        <displayFormat>DTW-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Aggregator Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AgreementAggregator__c</fullName>
        <externalId>true</externalId>
        <label>Agreement Aggregator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgreementNumber__c</fullName>
        <label>Agreement Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovedContingencyBudget__c</fullName>
        <label>Approved Budget Contingency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedCostBudget__c</fullName>
        <description>Approved Cost Budget</description>
        <label>Approved Total Cost Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedDPEBudget__c</fullName>
        <label>Approved DPE Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedDirectLaborBudget__c</fullName>
        <description>Approved Direct Labor Budget</description>
        <label>Approved Direct Labor Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedDirectLaborMultiplier__c</fullName>
        <description>Approved Direct Labor Multiplier</description>
        <label>Approved Direct Labor Multiplier</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedFringeBudget__c</fullName>
        <description>Approved Fringe Budget</description>
        <label>Approved Fringe Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedGrossMarginBudget__c</fullName>
        <description>Approved Gross Margin Budget</description>
        <label>Approved Gross Margin Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedGrossMarginofNSR__c</fullName>
        <formula>IF(AND(NOT(ISNULL(ApprovedGrossMarginBudget__c)), ApprovedGrossMarginBudget__c &gt; 0),  IF(AND(NOT(ISNULL(ApprovedNSRBudget__c)), ApprovedNSRBudget__c &gt; 0), ApprovedGrossMarginBudget__c/ApprovedNSRBudget__c, 0) , 0)





/*ApprovedGrossMarginBudget__c /  ApprovedNSRBudget__c */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved GM % of NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApprovedGrossRevenueBudget__c</fullName>
        <description>Approved Revenue Budget</description>
        <label>Approved Gross Revenue Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedNMofNSR__c</fullName>
        <description>ApprovedNetMargin__c / ApprovedNSRBudget__c</description>
        <formula>IF(AND(NOT(ISNULL(ApprovedNSRBudget__c)), ApprovedNSRBudget__c &gt; 0), ApprovedNetMarginBudget__c/ApprovedNSRBudget__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved NM% of NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApprovedNSRBacklog__c</fullName>
        <formula>ApprovedNSRBudget__c - ActualNSRITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved NSR Backlog</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedNSRBudget__c</fullName>
        <description>Approved NSR Budget</description>
        <label>Approved NSR Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedNetMarginBudget__c</fullName>
        <description>Approved Net Margin</description>
        <label>Approved Net Margin Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedODCBudget__c</fullName>
        <label>Approved ODC (excl subs) Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedOverheadBudget__c</fullName>
        <label>Approved Overhead Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedSalaryCostMultiplier__c</fullName>
        <label>Approved Salary Cost Multiplier</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedSubsBudget__c</fullName>
        <label>Approved Subs Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BIEE__c</fullName>
        <description>BIEE</description>
        <label>BIEE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BilledAR__c</fullName>
        <description>Billed AR</description>
        <label>Billed AR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessLineDescription__c</fullName>
        <label>Business Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRStatus__c</fullName>
        <formula>IF( 
ChangeRequest__c =&quot;&quot;, &quot;N/A&quot;, TEXT( ChangeRequest__r.EnrollmentStatus__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>EnrollmentPlan__c</referenceTo>
        <relationshipLabel>Incentive Projects (Change Request)</relationshipLabel>
        <relationshipName>Incentive_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractTypeShortName__c</fullName>
        <description>Hidden field used for Incentive Plan Manual Assignment page on the enrollment app</description>
        <formula>CASE( FPPOverallEligibility__c , &quot;Yes&quot;,&quot;Fixed Price&quot;, NULL) &amp;
CASE(  TMPlanOverallEligibility__c, &quot;Yes&quot;,&quot;Time &amp; Material&quot;, NULL)</formula>
        <label>ContractTypeShortName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <description>Displays the contract type as per AECOM&apos;s Insight.  For Oracle projects, this will reflect the Oracle contract type</description>
        <inlineHelpText>Displays the contract type as per AECOM&apos;s Insight.  For Oracle projects, this will reflect the Oracle contract type</inlineHelpText>
        <label>Contract Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountEnrollmentPlan__c</fullName>
        <label>CountEnrollmentPlan</label>
        <summaryFilterItems>
            <field>EnrollmentPlan__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Edit Application</value>
        </summaryFilterItems>
        <summaryForeignKey>EnrollmentPlan__c.IncentiveProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountofParticipants__c</fullName>
        <label>Count of Participants</label>
        <summarizedField>EnrollmentPlan__c.NumberofParticipants__c</summarizedField>
        <summaryForeignKey>EnrollmentPlan__c.IncentiveProject__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CurrencyISOCodeFormula__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTWAdminAttempted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is for bulk insert of IP&apos;s so that the batch process can work for smaller batches.</description>
        <label>DTWAdminAttempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTWAdminInitiated__c</fullName>
        <description>Date DTW Admin validated Incentive Project and initiated the Enrollment Process.</description>
        <inlineHelpText>Date DTW Admin validated Incentive Project and initiated the Enrollment Process.</inlineHelpText>
        <label>DTW Admin Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTWAdmin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DTW Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incentive_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTW_Admin_Status__c</fullName>
        <label>DTW Admin Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted to Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DTW_Complete__c</fullName>
        <formula>EnrollmentPlan__r.DTWComplete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTW % Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DataRefreshDate__c</fullName>
        <label>Data Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSalesOutstandingITD__c</fullName>
        <label>Date Sales Outstanding ITD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DistributionRule__c</fullName>
        <label>Distribution Rule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictDescription__c</fullName>
        <label>District Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EACasofDate__c</fullName>
        <description>Displays the date of the latest EAC update</description>
        <inlineHelpText>Displays the date of the latest EAC update</inlineHelpText>
        <label>EAC as of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPStatusNumber__c</fullName>
        <label>EP Status Number</label>
        <summarizedField>EnrollmentPlan__c.StatusNumber__c</summarizedField>
        <summaryForeignKey>EnrollmentPlan__c.IncentiveProject__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EPURL__c</fullName>
        <formula>EnrollmentPlan__r.EAURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EP URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveLoadDate__c</fullName>
        <label>Effective Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveSentDate__c</fullName>
        <label>Effective Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EligibleYN__c</fullName>
        <label>Eligible?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndMarket__c</fullName>
        <label>Global Business Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incentive_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnrollmentMetricLabel__c</fullName>
        <formula>IF( 
    ( EnrollmentStatus__c &lt;&gt; &quot;Enrolled&quot;), &quot;Application Metrics&quot;, &quot;Enrollment Metrics&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentMetric__c</fullName>
        <formula>IF( EnrollmentPlan__c==null, &apos;&apos;, EnrollmentPlan__r.EnrollmentMetrics__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click the icon to display project financial metrics crucial to DTW.  A red exclamation indicates a change in metrics and warrants your attention.  A blue &quot;i&quot; indicates metrics have not changed substantially since the last time this page was acknowledged.</inlineHelpText>
        <label>*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Application</label>
        <referenceTo>EnrollmentPlan__c</referenceTo>
        <relationshipLabel>Incentive Projects</relationshipLabel>
        <relationshipName>IncentiveProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnrollmentStatus__c</fullName>
        <formula>IF( PaymentRequest__c &lt;&gt; &quot;&quot;,  Text(PaymentRequest__r.EnrollmentStatus__c),

IF(
    AND(
       (EnrollmentPlan__c=&quot;&quot;), 
        OR(
           TEXT(FPPOverallEligibility__c)=&quot;Yes&quot;,
           TEXT(TMPlanOverallEligibility__c)=&quot;Yes&quot;
           )
         ),
&quot;Pending DTW Action&quot;, 
IF(
   (EnrollmentPlan__c=&quot;&quot;), &quot;Not Eligible&quot;,
   TEXT(EnrollmentPlan__r.EnrollmentStatus__c)
   )
   )
)</formula>
        <label>Enrollment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPPCompletionBacklogEligilbility__c</fullName>
        <description>Indicates whether or not a project meets completion/backlog eligibility requirements for the Fixed Price Plan.</description>
        <inlineHelpText>Indicates whether or not a project meets completion/backlog eligibility requirements for the Fixed Price Plan.</inlineHelpText>
        <label>FP Plan % Completion/Backlog Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FPPContractTypeEligibility__c</fullName>
        <description>Indicates whether or not a project meets current Contract Type eligibility requirements for the Fixed Price Plan.</description>
        <inlineHelpText>Indicates whether or not a project meets current Contract Type eligibility requirements for the Fixed Price Plan.</inlineHelpText>
        <label>FP Plan Contract Type Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FPPOverallEligibility__c</fullName>
        <description>Indicates whether or not a project meets eligibility requirements for the Fixed Price Plan.</description>
        <inlineHelpText>Indicates whether or not a project meets eligibility requirements for the Fixed Price Plan.</inlineHelpText>
        <label>FP Plan Overall Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FPPProjectSizeEligibility__c</fullName>
        <description>Indicates whether or not a project meets current size eligibility requirements for the Fixed Price Plan.  Most often dictated by Budgeted NSR.</description>
        <inlineHelpText>Indicates whether or not a project meets current size eligibility requirements for the Fixed Price Plan.  Most often dictated by Budgeted NSR.</inlineHelpText>
        <label>FP Plan Project Size Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FPPProjectStatusEligibility__c</fullName>
        <description>Indicates whether or not a project meets current eligibility requirements for remaining duration (Scheduled End Date) and current EAC (EAC as of Date) as outlined in the Fixed Price Plan.</description>
        <inlineHelpText>Indicates whether or not a project meets current eligibility requirements for remaining duration (Scheduled End Date) and current EAC (EAC as of Date) as outlined in the Fixed Price Plan.</inlineHelpText>
        <label>Project Status Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FiscalPeriodNumber__c</fullName>
        <inlineHelpText>YYYYMM</inlineHelpText>
        <label>Fiscal Period Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastContingencyBudget__c</fullName>
        <description>Forecast Contingency Budget</description>
        <label>Forecast Contingency Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastCostBudget__c</fullName>
        <label>Forecast Total Cost Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastDPEBudget__c</fullName>
        <label>Forecast DPE Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastDirectLaborMultiplier__c</fullName>
        <description>Forecast Direct Labor Multiplier</description>
        <label>Forecast Direct Labor Multiplier</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ForecastDirectLabor__c</fullName>
        <label>Forecast Direct Labor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastFringeBudget__c</fullName>
        <description>Forecast Fringe Budget</description>
        <label>Forecast Fringe Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastGrossMarginBudget__c</fullName>
        <label>Forecast Gross Margin Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastGrossMarginofNSR__c</fullName>
        <formula>IF(AND(NOT(ISNULL(ForecastGrossMarginBudget__c)),ForecastGrossMarginBudget__c &gt; 0),  IF(AND(NOT(ISNULL(ForecastNSRBudget__c)),ForecastNSRBudget__c &gt; 0), ForecastGrossMarginBudget__c/ForecastNSRBudget__c, 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the Estimate at Completion (EAC) Gross Margin % of NSR for the project.  The EAC should be compared to the budget and ITD performance for the purposes of setting a DTW baseline.  Click for further details about the EAC of the project.</inlineHelpText>
        <label>Forecast GM % of NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ForecastNMofNSR__c</fullName>
        <formula>IF(AND(NOT(ISNULL(ForecastNetMarginBudget__c)),ForecastNetMarginBudget__c &gt; 0),  IF(AND(NOT(ISNULL(ForecastNSRBudget__c)),ForecastNSRBudget__c &gt; 0), ForecastNetMarginBudget__c/ForecastNSRBudget__c, 0) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast NM% of NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ForecastNSRBacklog__c</fullName>
        <formula>ForecastNSRBudget__c  -  ActualNSRITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast NSR Backlog</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastNSRBudget__c</fullName>
        <description>Forecast NSR Budget</description>
        <label>Forecast NSR Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastNetMarginBudget__c</fullName>
        <description>Forecast Net Margin</description>
        <label>Forecast Net Margin Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastODCBudget__c</fullName>
        <label>Forecast ODC (excl subs) Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastOverheadBudget__c</fullName>
        <label>Forecast Overhead Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastRevenueBudget__c</fullName>
        <description>Forecast Revenue Budget</description>
        <label>Forecast Revenue Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastSalaryCostMultiplier__c</fullName>
        <label>Forecast Salary Cost Multiplier</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ForecastSubsBudget__c</fullName>
        <label>Forecast Subs Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GMEACChange__c</fullName>
        <label>GMEACChange</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GRBacklog__c</fullName>
        <label>Gross Revenue Backlog</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GeographyDescription__c</fullName>
        <label>Geography</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITDDSO__c</fullName>
        <label>ITD DSO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IneligibleTextOld__c</fullName>
        <label>Ineligible TextOld</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <label>IsClosed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegalEntityDescription__c</fullName>
        <label>Legal Entity</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetricWarning__c</fullName>
        <formula>TEXT(EnrollmentPlan__r.MetricWarningActive__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MetricWarning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetARBalance__c</fullName>
        <label>Net AR Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NoofParticipants__c</fullName>
        <formula>EnrollmentPlan__r.NumberofParticipants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgCarryingOutProject__c</fullName>
        <label>Project Owning Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationString__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization String</label>
        <referenceTo>OrganizationString__c</referenceTo>
        <relationshipLabel>Incentive Projects</relationshipLabel>
        <relationshipName>Incentive_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMMismatch__c</fullName>
        <formula>and(not(isblank(EnrollmentPlan__c)),
ProjectManager__r.Id &lt;&gt; OwnerId,
not(begins( OwnerId,&quot;00G&quot;)),
not(isblank(ProjectManager__c))


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Mismatch</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>